force-app/main/default/objects/Commission__c/fields/Account_Intro_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Intro_Source__c</fullName>
    <description>Account Intro Source from the Deal</description>
    <label>Account Intro Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>