force-app/main/default/objects/Commission__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>Deal__r.Account.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>