force-app/main/default/objects/Commission__c/fields/Advance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Advance_Fee__c</fullName>
    <label>Advance Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>