force-app/main/default/objects/Commission__c/fields/Approved_Advance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Advance_Amount__c</fullName>
    <label>Approved Advance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>