force-app/main/default/objects/Commission__c/fields/Bridge_Program1__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Program1__c</fullName>
    <label>Bridge Program</label>
    <length>45</length>
    <type>Text</type>
</CustomField>