force-app/main/default/objects/Commission__c/fields/CAF_YSP__c.field-meta.xml
<CustomField>
    <fullName>CAF_YSP__c</fullName>
    <label>CAF YSP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>