force-app/main/default/objects/Commission__c/fields/Commission_Amount1__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount1__c</fullName>
    <label>Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>