force-app/main/default/objects/Commission__c/fields/Commission_Detail__c.field-meta.xml
<CustomField>
    <fullName>Commission_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Commission Type Record</description>
    <inlineHelpText>Parent Commission Type Record</inlineHelpText>
    <label>Commission Detail</label>
    <referenceTo>Commission_Detail__c</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>