force-app/main/default/objects/Commission__c/fields/Commission_Total__c.field-meta.xml
<CustomField>
    <fullName>Commission_Total__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission Total</label>
    <referenceTo>Commission_Total__c</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>