force-app/main/default/objects/Commission__c/fields/Commission_Type1__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type1__c</fullName>
    <formula>TEXT(Deal__r.Commission_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Commission Type from the Deal</inlineHelpText>
    <label>Deal Commission Type</label>
    <type>Text</type>
</CustomField>