force-app/main/default/objects/Commission__c/fields/Commissionable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commissionable_Amount__c</fullName>
    <label>Commissionable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>