force-app/main/default/objects/Commission__c/fields/CRE_Multi_Deal__c.field-meta.xml
<CustomField>
    <fullName>CRE_Multi_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRE/Multi Deal</label>
    <type>Checkbox</type>
</CustomField>