force-app/main/default/objects/Commission__c/fields/Deal_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Close_Date__c</fullName>
    <formula>Deal__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Close Date</label>
    <type>Date</type>
</CustomField>