force-app/main/default/objects/Commission__c/fields/Final_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Loan_Amount__c</fullName>
    <formula>Deal__r.Final_Loan_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Loan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>