force-app/main/default/objects/Commission__c/fields/Final_Loan_Amount_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Final_Loan_Amount_Trigger__c</fullName>
    <label>Final Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>