force-app/main/default/objects/Commission__c/fields/Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount__c</fullName>
    <inlineHelpText>LOC Commitment for Bridge and Final Loan Amount for Term</inlineHelpText>
    <label>Loan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>