force-app/main/default/objects/Commission__c/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bridge Loan</fullName>
            </value>
            <value>
                <fullName>Term Loan</fullName>
            </value>
            <value>
                <fullName>SAB Loan</fullName>
            </value>
            <value>
                <fullName>Single Rental Loan</fullName>
            </value>
            <value>
                <fullName>Acquired Bridge Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>