force-app/main/default/objects/Commission__c/fields/Origination_Fee__c.field-meta.xml
<CustomField>
    <fullName>Origination_Fee__c</fullName>
    <inlineHelpText>Origination Fee + Caf YSP if Term
Origination Fee percent only if Bridge</inlineHelpText>
    <label>Origination Fee % + CAF YSP</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>