force-app/main/default/objects/Commission__c/fields/Origination_Fee_Amt__c.field-meta.xml
<CustomField>
    <fullName>Origination_Fee_Amt__c</fullName>
    <label>Origination Fee $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>