force-app/main/default/objects/Commission__c/fields/Quota__c.field-meta.xml
<CustomField>
    <fullName>Quota__c</fullName>
    <inlineHelpText>If commission type term, term quota
If commission type bridge, bridge quota</inlineHelpText>
    <label>Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>