force-app/main/default/objects/Commission__c/fields/Repeat_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Borrower__c</fullName>
    <formula>Deal__r.Account.Repeat_Borrower__c</formula>
    <label>Repeat Borrower</label>
    <type>Checkbox</type>
</CustomField>