force-app/main/default/objects/Commission__c/fields/Total_Borrowed_on_Bridge__c.field-meta.xml
<CustomField>
    <fullName>Total_Borrowed_on_Bridge__c</fullName>
    <description>Total amount borrowed on Bridge Loans</description>
    <inlineHelpText>Total amount borrowed on Bridge Loans</inlineHelpText>
    <label>Total Borrowed on Bridge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>