force-app/main/default/objects/Commission__c/fields/Total_Borrowed_on_Term__c.field-meta.xml
<CustomField>
    <fullName>Total_Borrowed_on_Term__c</fullName>
    <description>Total amount borrowed on Term Loans</description>
    <inlineHelpText>Total amount borrowed on Term Loans</inlineHelpText>
    <label>Total Borrowed on Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>