force-app/main/default/objects/Commission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Deal__c</columns>
    <columns>Loan_Type__c</columns>
    <columns>Account_Intro_Source__c</columns>
    <columns>Commission_Type__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>